--- a/CSISD-Tolling-System/CSISD-Tolling-System/appsettings.json
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CSISD-Tolling-System-627E3365-1079-4B5A-B606-FE274BBBB827;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CSISD-Tolling-System-627E3365-1079-4B5A-B606-FE274BBBB827;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "CSISD_Tolling_SystemContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CSISD-Tolling-System;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
