--- a/CSISD-Tolling-System/CSISD-Tolling-System/CSISD-Tolling-System.csproj
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/CSISD-Tolling-System.csproj
@@ -17,5 +17,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Tolls\" />
+  </ItemGroup>
+
 
 </Project>
