--- a/CSISD-Tolling-System/CSISD-Tolling-System/CSISD-Tolling-System.csproj
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/CSISD-Tolling-System.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="compilerconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BuildWebCompiler" Version="1.12.405" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.0.0" />
@@ -19,6 +23,10 @@
 
   <ItemGroup>
     <Folder Include="Areas\Tolls\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="compilerconfig.json" />
   </ItemGroup>
 
 
