--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.0
+        dotnet-version: 5.0.x
     - name: Restore dependencies
       run: dotnet restore
       working-directory: CSISD-Tolling-System
@@ -22,5 +22,3 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
       working-directory: CSISD-Tolling-System
-
-
