--- a/CSISD-Tolling-System/CSISD-Tolling-System.UnitTests/CSISD-Tolling-System.UnitTests.csproj
+++ b/CSISD-Tolling-System/CSISD-Tolling-System.UnitTests/CSISD-Tolling-System.UnitTests.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CSISD-Tolling-System\CSISD-Tolling-System.csproj" />
+  </ItemGroup>
+
 </Project>
