--- a/CSISD-Tolling-System/CSISD-Tolling-System/CSISD-Tolling-System.csproj
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/CSISD-Tolling-System.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\Tolls\**" />
+    <Content Remove="Areas\Tolls\**" />
+    <EmbeddedResource Remove="Areas\Tolls\**" />
+    <None Remove="Areas\Tolls\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="compilerconfig.json" />
   </ItemGroup>
 
@@ -22,11 +29,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Tolls\" />
+    <None Include="Areas\Tolls\Views\Contracts.cshtml" />
+    <None Include="Areas\Tolls\Views\Invoices.cshtml" />
+    <None Include="Areas\Tolls\Views\Payment.cshtml" />
+    <None Include="Areas\Tolls\Views\TollHistory.cshtml" />
+    <None Include="compilerconfig.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="compilerconfig.json" />
+    <Folder Include="Areas\Tolls\Controllers\" />
+    <Folder Include="Areas\Tolls\Data\" />
+    <Folder Include="Areas\Tolls\Models\" />
   </ItemGroup>
 
 
