--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/CSISD_Toll_Operator_Assignment.csproj
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/CSISD_Toll_Operator_Assignment.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\ISimulationService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.21" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.21" />
