--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment.UnitTests/CSISD_Toll_Operator_Assignment.UnitTests.csproj
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment.UnitTests/CSISD_Toll_Operator_Assignment.UnitTests.csproj
@@ -1,17 +1,21 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>CSISD_Tolling_System.UnitTests</RootNamespace>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Moq" Version="4.17.1" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CSISD_Toll_Operator_Assignment\CSISD_Toll_Operator_Assignment.csproj" />
   </ItemGroup>
 
 </Project>
