--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/CSISD_Toll_Operator_Assignment.csproj
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/CSISD_Toll_Operator_Assignment.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
