--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/CSISD_Toll_Operator_Assignment.csproj
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/CSISD_Toll_Operator_Assignment.csproj
@@ -9,6 +9,39 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
+    <None Include="wwwroot\font-awesome-4.7.0\fonts\fontawesome-webfont.woff2" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\animated.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\bordered-pulled.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\core.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\fixed-width.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\font-awesome.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\icons.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\larger.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\list.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\mixins.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\path.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\rotated-flipped.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\screen-reader.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\stacked.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\less\variables.less" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\font-awesome.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_animated.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_bordered-pulled.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_core.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_fixed-width.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_icons.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_larger.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_list.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_mixins.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_path.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_rotated-flipped.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_screen-reader.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_stacked.scss" />
+    <None Include="wwwroot\font-awesome-4.7.0\scss\_variables.scss" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.21" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.21" />
